--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,15 +4,27 @@ body {
     font-family: Roboto, monospace, Arial;
 }
 
+.info {
+    padding: 0 15% 5em;
+}
+
 .header {
     background-color: #1F2937;
-    padding: 1em 10%;
+    padding: 1em 10% 5em;
 }
 
 .left-container h2,
 .header .logo,
 button {
     color: #F9FAF8;
+}
+
+.info h3 {
+    /* Remove h3 default margins. */
+    font-size: 36px;
+    font-weight: 800;
+    color: #1F2937;
+    text-align: center;
 }
 
 .left-container h2 {
@@ -24,6 +36,7 @@ button {
 
 .header .logo {
     font-size: 24px;
+    font-weight: 800;
 }
 
 /* Remove default ul styling. */
@@ -49,6 +62,12 @@ button {
     background-color: #3882F6;
     /* Inherit font from body. */
     font-family: inherit;
+    padding: 10px;
+    border-radius: 10px;
+    border: none;
+    min-width: 125px;
+    font-size: 18px;
+    font-weight: 800;
 }
 
 .header-top {
@@ -63,14 +82,106 @@ button {
     gap: 1em;
 }
 
-.header-top, .right-container{
-    margin-bottom: 4em;
+.header-top {
+    margin-bottom: 5em;
 }
 
 /* Style bottom section of hero content. */
-.header-bottom{
+.header-bottom {
     display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.header-bottom .left-container {
+    flex-basis: 48%;
+}
+
+.header-bottom .right-container {
+    flex-basis: 48%;
+}
+
+.right-container {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.info-text {
+    font-size: 18px;
+}
+
+.info img {
+    border: 3px solid #3882F6;
+    border-radius: 10px;
+    max-width: 200px;
+    max-height: 200px;
+}
+
+.info-item-container {
+    display: flex;
+    justify-content: center;
     gap: 2em;
 }
 
+.info-item {
+    text-align: center;
+}
 
+.quote {
+    background-color: #E5E7EB;
+    padding: 5em 15%;
+}
+
+.quote q {
+    font-size: 36px;
+    color: #1F2937;
+    font-style: italic;
+    font-weight: 300;
+    /* Remove quotation marks. */
+    quotes: none;
+}
+
+.quote figcaption{
+    text-align: right;
+    font-weight: 700;
+}
+
+.call-to-action{
+    padding: 5em 10%;
+}
+
+.sign-up{
+    background-color: #3882F6;
+    border-radius: 5px;
+    padding: 3em 5%;
+}
+
+.call-to-action button{
+    border: 2px solid white;
+}
+
+.sign-up-info p{
+    margin: 0;
+    color: white;
+}
+
+.sign-up-info p{
+    font-size: 18px;
+}
+
+p.p-bold{
+    font-weight: 700;
+    font-size: 20px;
+}
+
+.sign-up{
+    display: flex;
+    justify-content: space-between;
+}
+
+footer{
+    text-align: center;;
+    background-color: #1F2937;
+    color: white; 
+    padding: 2em 0;
+}
