--- a/styles/styles.css
+++ b/styles/styles.css
@@ -106,6 +106,15 @@ button {
     justify-content: flex-end;
 }
 
+.right-container img{
+    max-width: 100%;
+    height: auto;
+}
+
+.right-container figcaption, .right-container a{
+    color: white;
+}
+
 .info-text {
     font-size: 18px;
 }
@@ -119,12 +128,15 @@ button {
 
 .info-item-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
     gap: 2em;
 }
 
 .info-item {
     text-align: center;
+    /* Make image text same width of image */
+    max-width: min-content;
 }
 
 .quote {
@@ -139,6 +151,10 @@ button {
     font-weight: 300;
     /* Remove quotation marks. */
     quotes: none;
+}
+
+.right-container figure{
+    margin:0;
 }
 
 .quote figcaption{
@@ -160,7 +176,7 @@ button {
     border: 2px solid white;
 }
 
-.sign-up-info p{
+.sign-up-info p, .right-container figcaption p{
     margin: 0;
     color: white;
 }
